<resources>
    <string name="app_name">FlightMCS</string>
    <string name="LogoString">PuFF and Poof Logo</string>
    <string name="tabLayoutText">This is tab layout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_placeholder">Airplane</string>
    <string name="pricePlaceholder">$12</string>
    <string name="sizePlaceholder">5 in</string>
    <string name="usernamePlaceholder">adminpuff</string>
    <string name="OTP_String1">We have sent a 4 digit OTP code to</string>
    <string name="phone_placeholder">0851234131254</string>
    <string name="otp_string2">Please input the code: </string>
    <string name="flightnumber">FlightNumber</string>
    <string name="ArrivalTime">2024-4-03</string>
    <string name="AirportArrivalPlaceholder">Departure: Soekarno Hatta</string>
    <string name="AirportArrivalCodePlaceholder">CGK</string>
    <string name="TypePlanePlaceholder">Airbus</string>
</resources>