<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPPage">

    <TextView
        android:id="@+id/otpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Enter Verification Code"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/headerguideline"
        tools:ignore="HardcodedText" />

    <ImageView
        android:id="@+id/otpImage"
        android:layout_width="303dp"
        android:layout_height="264dp"
        android:layout_marginTop="25dp"
        android:alpha="1"
        app:layout_constraintEnd_toStartOf="@id/rightguideline"
        app:layout_constraintStart_toEndOf="@id/leftguideline"
        app:layout_constraintTop_toBottomOf="@id/otpTitle"
        app:srcCompat="@mipmap/message_icon" />

    <TextView
        android:id="@+id/otp_string1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OTP_String1"
        app:layout_constraintEnd_toStartOf="@+id/rightguideline"
        app:layout_constraintStart_toStartOf="@+id/leftguideline"
        app:layout_constraintTop_toBottomOf="@id/otpImage"
        android:layout_marginTop="15dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_placeholder"
        app:layout_constraintEnd_toStartOf="@+id/rightguideline"
        app:layout_constraintStart_toStartOf="@+id/leftguideline"
        app:layout_constraintTop_toBottomOf="@id/otp_string1"
        android:layout_marginTop="3dp"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/otp_string2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_string2"
        app:layout_constraintEnd_toStartOf="@+id/rightguideline"
        app:layout_constraintStart_toStartOf="@+id/leftguideline"
        app:layout_constraintTop_toBottomOf="@id/phone_number"
        android:layout_marginTop="3dp"
        android:textSize="14sp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/OTPTL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:boxBackgroundColor="#ECECEC"
        app:boxBackgroundMode="filled"
        app:boxCollapsedPaddingTop="8dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:helperText=""
        app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Body1"
        app:helperTextTextColor="#CC0606"
        app:hintTextColor="#000000"
        app:layout_constraintEnd_toStartOf="@+id/rightguideline"
        app:layout_constraintStart_toStartOf="@+id/leftguideline"
        app:layout_constraintTop_toBottomOf="@+id/otp_string2"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/OTPText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAlignment="center"
            android:textSize="24sp"
            android:hint="OTP"
            android:ellipsize = "start"
            android:gravity="center_horizontal"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/resendTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:text="Didn't get the code?, Resend Code"
        app:layout_constraintEnd_toStartOf="@+id/rightguideline"
        app:layout_constraintStart_toStartOf="@+id/leftguideline"
        app:layout_constraintTop_toBottomOf="@+id/OTPTL" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="233dp"
        android:layout_height="69dp"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="#905C3F"
        android:text="Submit"
        android:textColor="#F9E3AF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="30dp"
        app:iconTint="#F9E3AF"
        app:layout_constraintBottom_toTopOf="@+id/footerGuideline"
        app:layout_constraintEnd_toStartOf="@+id/rightguideline"
        app:layout_constraintStart_toStartOf="@+id/leftguideline"
        app:layout_constraintTop_toBottomOf="@+id/OTPTL" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/headerguideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/footerGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="712dp" />
</androidx.constraintlayout.widget.ConstraintLayout>