<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlightDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profileToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:paddingHorizontal="18dp"
        android:gravity="center_vertical"
        android:background="@color/primaryColor">

        <ImageButton
            android:id="@+id/FlightDetailBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:text="BackB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Flight Detail"
            android:textSize="24sp"
            android:textAlignment="center"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/LogoImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/FlightDescLayout"
        app:layout_constraintTop_toBottomOf="@+id/profileToolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/FlightDescLayout"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@drawable/detailoutline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/AirlineName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="36dp"
            android:text="Airline Name"
            android:textAlignment="center"
            android:textColor="@color/defaultText"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/AirlineCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="28dp"
            android:text="Code"
            android:textColor="@color/defaultText"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/AirlineName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.942"
            app:layout_constraintStart_toEndOf="@+id/AirlineName"
            app:layout_constraintTop_toTopOf="@+id/AirlineName"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/AirplaneType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="Airplane Type: "
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/AirlineName"
            app:layout_constraintTop_toBottomOf="@+id/AirlineName" />

        <TextView
            android:id="@+id/RealAirplane"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TypePlanePlaceholder"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/AirplaneType"
            app:layout_constraintStart_toEndOf="@+id/AirplaneType" />

        <TextView
            android:id="@+id/FlightDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="28dp"
            android:text="Flight Duration 3h30m"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AirplaneType" />


        <TextView
            android:id="@+id/Destination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="15dp"
            android:text="Destination: "
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/FlightDuration"
            app:layout_constraintTop_toBottomOf="@+id/FlightDuration" />

        <TextView
            android:id="@+id/Departure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:text="Departure: "
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/Destination"
            app:layout_constraintTop_toBottomOf="@+id/Destination" />

        <TextView
            android:id="@+id/DepartureAirport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AirportArrivalPlaceholder"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/Departure"
            app:layout_constraintStart_toEndOf="@+id/Departure" />


        <TextView
            android:id="@+id/DateDeparture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:text="Time: "
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/Departure"
            app:layout_constraintTop_toBottomOf="@+id/Departure" />

        <TextView
            android:id="@+id/TimeDeparture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ArrivalTime"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/DateDeparture"
            app:layout_constraintStart_toEndOf="@+id/DateDeparture" />

        <TextView
            android:id="@+id/Arrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="20dp"
            android:text="Arrival: "
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/DateDeparture"
            app:layout_constraintTop_toBottomOf="@+id/DateDeparture" />

        <TextView
            android:id="@+id/ArrivalAirport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AirportArrivalPlaceholder"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/Arrival"
            app:layout_constraintStart_toEndOf="@+id/Arrival" />


        <TextView
            android:id="@+id/DateArrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="10dp"
            android:text="Time: "
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="@+id/Arrival"
            app:layout_constraintTop_toBottomOf="@+id/Arrival" />

        <TextView
            android:id="@+id/TimeArrival"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ArrivalTime"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="@+id/DateArrival"
            app:layout_constraintStart_toEndOf="@+id/DateArrival" />


        <Button
            android:id="@+id/AddFlightButton"
            android:layout_width="210dp"
            android:layout_height="60dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/defaultButton"
            android:text="Add Flight"
            android:textColor="@color/defaultText"
            android:textSize="22sp"
            android:textStyle="bold"
            app:cornerRadius="30dp"
            app:iconTint="#F9E3AF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
